# Voice-assistant

./: .env  README.md  agent.py  app.py  main.py  pyproject.toml  requirements.txt  stt.py  translate.py  translate1.py  tts.py
